--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "dgt-directives",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "private": false,
   "license": "MIT",
   "main": "lib/dgt-directives.umd.min.js",
-  "description": "指令库",
+  "description": "丰富指令库，新增了10个新的指令",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
